[tool.poetry]
name = "thesaurus"
version = "0.1.0"
description = ""
authors = ["Deborah Nacache <deborahn@israntique.org.il>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
oracledb = "^1.3.2"
tqdm = "^4.65.0"
pyodbc = "^5.1.0"
typed-argument-parser = "^1.8.1"
pyproj = "^3.6.0"
pypdf2 = "^3.0.1"
shapely = "2.0.2"
psycopg2 = "^2.9.9"
fastapi = "0.111.0"
uvicorn = "0.29.0"
asyncpg = "0.29.0"
pydantic = "2.7.1"
typing = "3.10.0.0"





[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
